--- a/djangoWebsocket/templates/index.html
+++ b/djangoWebsocket/templates/index.html
@@ -16,7 +16,7 @@
         socket.send("hello world");
     };
     // Call onopen directly if socket is already open
-    if (socket.readyState == WebSocket.OPEN) {
+    if (socket.readyState === WebSocket.OPEN) {
         socket.onopen();
     }
 
